made some edits to the contents

--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
 					<strong>Hello, I'm Jonah</strong>
 					<small class="text-light">Welcome to my web portfolio!</small>
 				</h1>
-				<p class="lead w-75 text-dark text-capitalized">A fullstack web developer. Looking for a full-time employment or part-time and I will highly
-					 consider an intern position to gain your trust that I belong. Let's turn your ideas into a reality, shall we?</p>
-			</div>
+				<p class="lead w-75 text-dark text-capitalized"> I am a fullstack web developer. I'm looking for full-time or part-time employment, and I will highly consider an intern position to show good faith. Let's turn your ideas into a reality, shall we?			</div>
 		</div>
 	</div>
 
@@ -83,12 +81,10 @@
 	</p>
 	<div class="title-underline bg-danger ml-5"></div>
 	<p class="text-muted px-4 py-3 col-md-12">
-		Hi, my name is Opeyemi Jonah, a full-stack web developer. That just means I
-		can give your website cool functionalities and still give it a dope outlook
-		for a better user experience. I fell in love with programming
-		ever since I typed in my first 'Hello, world' program. I'm a Deep-dive coding boot-camp
-		student in the city of Albuquerque looking forward to work with any company as an intern right after my program.
-	</p>
+		Hi, my name is Opeyemi Jonah, I am a full-stack web developer.
+		That just means I can give your website cool functionalities and also give it a dope outlook for a better user experience.
+		I fell in love with programming ever since I typed in my first 'Hello, world' program.
+		I'm a Deep Dive coding bootcamp graduate in the city of Albuquerque looking forward to working with any company as an intern right after my program.	</p>
 </div>
 
 
@@ -98,8 +94,8 @@
 		<div class="col my-4 mx-5">
 			<i class="fas fa-basketball-ball fa-10x text-warning" ></i>
 			<h3 class="text-capitalize text-danger py-2">Team Player</h3>
-			<p class="text-muted w-90 lead">I played basketball in college as a point guard. I've always been a team
-				first type of player I get joy in seeing others shine.</p>
+			<p class="text-muted w-90 lead"> I played basketball in college as a point guard.
+				I've always been a team-first type of player. I enjoy seeing others shine.</p>
 
 		</div>
 
@@ -107,15 +103,14 @@
 			<i class="fas fa-book-open fa-10x text-warning"></i>
 			<h3 class="text-capitalize text-danger py-2">Researcher</h3>
 			<p class ="text-muted w-90 lead">
-				“I have no special talents. I am only passionately curious.” —Albert Einstein1”
+				“I have no special talents. I am only passionately curious.” —Albert Einstein”
 			</p>
 		</div>
 
 		<div class="col my-4 mx-5 ">
 			<i class="fas fa-gamepad fa-9x text-warning"></i>
 			<h3 class="text-capitalize text-danger py-2">Gamer</h3>
-			<p class ="text-muted w-90 lead ">What do I do when I'm not working?
-			 Playing video games</p>
+			<p class ="text-muted w-90 lead ">What do I do when I'm not working? Play video games!</p>
 		</div>
 
 
