--- a/public_html/index.html
+++ b/public_html/index.html
@@ -262,7 +262,7 @@
 			</div>
 		</div>
 
-		<form action="../php/mailer.php" id="my-contact-form" method="POST">
+		<form action="../php/" id="my-contact-form" method="POST">
 
 			<input type="text" id="name" name="name" placeholder="Your Name (required)">
 
@@ -272,7 +272,7 @@
 
 			<textarea id="message" name="message" placeholder="Message..." style="height:200px"></textarea>
 
-			<div class="g-recaptcha" data-sitekey="6LeCBOwUAAAAAMmQ-ehc4EwUr2_wW1BxUr3z8T9p"></div>
+			<div class="g-recaptcha" data-sitekey="6LcZdvIUAAAAALg5v2zMrnhUyHKe308E3Wadjvjm"></div>
 
 			<button class="btn btn-success ml-3 " type="submit"> Send</button>
 			<button class="btn btn-warning ml-3" type="reset">Reset</button>
