--- a/public_html/index.html
+++ b/public_html/index.html
@@ -84,15 +84,37 @@
 		<strong>About Me</strong>
 	</p>
 	<div class="title-underline bg-danger ml-5"></div>
+
+	<div class="container-fluid my-5 pb-5">
+		<div class="row bg-light text-dark">
+			<div class="container px-0">
+				<div class="col-md-3">
+					<img class="float-left img-fluid py-5 my-image" src="images/IMG_0502.JPG" alt="Jonah's photo">
+				</div>
+				<div class="col-md-9 float-right py-5">
 	<p class="text-muted px-4 py-3 col-md-12">
-		Hi, my name is Opeyemi Jonah, I am a full-stack web developer.
-		That just means I can give your website cool functionalities and also give it a dope outlook for a better user experience.
-		I fell in love with programming ever since I typed in my first 'Hello, world' program.
-		I'm a Deep Dive coding bootcamp graduate in the city of Albuquerque looking forward to working with any company as an intern right after my program.	</p>
+		I'm a resident of the state of New Mexico. I'm originally from Nigeria. I majored in Mathematics and Statistics
+		in the University of Lagos class of 2015, Nigeria where
+		 I encountered programming for the first time. My first program was written in Java and it was a "Hello world"
+		displaying on my window pane. That
+		 brought an excitement to my heart and I've always wanted to do more. I was able to write functions that solve
+		exponential equations that take in user input. I wrote codes in Java, python and R during my years in college.<br>
+		<br>I attended CNM ingenuity program <a href="https://deepdivecoding.com/" target="_blank">Deep Dive Coding Bootcamp</a> in March for solid 3 months of coding drills where
+		I learnt a lot of web programming skills and languages.
+		I love making functionalities for website as well as designing them and I'm more keen towards object oriented programming.
+ I get a satisfaction in the ability to make my ideas or anybody's a reality through programming.<br>
+		I am looking for an entry level position or paid internship as a full-stack web developer or a software developer. Looking forward
+		to the challenges to make me the coding warrior I hope to be 😃.
+
+			</p>
 </div>
+		</div>
+	</div>
+</div>
+	</div>
 
 
-<div class="container-fluid">
+<div class="container-fluid pt-4">
 	<div class="row d-flex justify-content-between mx-4">
 
 		<div class="col my-4 mx-5">
@@ -143,9 +165,9 @@
 
 			<i class="fab fa-php fa-5x mt-4" id="php"></i>
 			<h3 class="text-uppercase my-3">php</h3>
-			<p class="text-danger">The PHP Hypertext Preprocessor (PHP) is a programming language that allows web developers
-				to create dynamic content that interacts with databases. PHP is basically used for developing web based software applications.
-				This tutorial helps you to build your base with PHP.
+			<p class="text-danger ">I created web pages with functionalities to store information
+			from users into a database.
+		Created classes using OOP in PHP. <br> <a href="https://bootcamp-coders.cnm.edu/~ojonah/object-oriented/php/lib/create.php"> Sample page</a>
 			</p>
 
 		</div>
@@ -158,8 +180,7 @@
 			<i class="fab fa-js fa-5x mt-4" id="js"></i>
 			<h3 class="text-uppercase my-3">javascript</h3>
 			<p class="text-danger">JavaScript (JS) is a lightweight, interpreted, or just-in-time compiled programming
-				language with first-class functions. While it is most well-known as the scripting language for Web pages, many non-browser environments also use it, such as Node.js,
-				Apache CouchDB and Adobe Acrobat.
+				language with first-class functions. I used JavaScript to create some functions on web pages using event listeners.
 			</p>
 
 		</div>
@@ -171,9 +192,9 @@
 
 			<i class="fab fa-react fa-5x mt-4" id="react"></i>
 			<h3 class="text-uppercase my-3">react.js</h3>
-			<p class="text-danger">React is a JavaScript library that specializes in helping developers build user interfaces, or UIs.
-				In terms of websites and web applications,
-				UIs are the collection of on-screen menus, search bars, buttons, and anything else someone interacts with to USE a website or app.
+			<p class="text-danger">
+				 I applied React to render components to the front end for user experience for my App called Pan-Ops.
+				I used Node.js to install React libraries.
 			</p>
 
 		</div>
@@ -212,10 +233,8 @@
 
 			<i class="fab fa-css3 fa-5x mt-4" id="css"></i>
 			<h3 class="text-uppercase my-3">css</h3>
-			<p class="text-danger">Cascading Style Sheets is a style sheet language used for describing the presentation of a
-				document written in a markup language like HTML.
-				This is my go to in styling a web page together with bootstrap a pre-set css class. I have also 2 years of experience
-				using cascading styles sheet for my projects.
+			<p class="text-danger">
+				This is my go to in styling a web page together with bootstrap a pre-set css class. I use cascading styles sheet for my web projects.
 			</p>
 
 		</div>
@@ -227,8 +246,8 @@
 
 			<i class="fas fa-database fa-5x mt-4" id="mysql"></i>
 			<h3 class="text-uppercase my-3">mysql</h3>
-			<p class="text-danger">MySQL is the most popular Open Source Relational SQL Database Management System.
-				MySQL is one of the best RDBMS being used for developing various web-based software applications
+			<p class="text-danger"> I used this to store data
+				 into the database for web applications.
 			</p>
 
 		</div>
@@ -239,8 +258,7 @@
 		<div class="col-6 col-md-4 col-lg-3 text-center my-4">
 			<i class="fab fa-java fa-5x mt-4" id="java"></i>
 			<h3 class="text-uppercase my-3">java</h3>
-			<p class="text-danger">Java is a general-purpose programming language that is class-based, object-oriented,
-				and designed to have as few implementation dependencies as possible. I have worked with java building software
+			<p class="text-danger"> I have worked with java building software
 				using object oriented programming.
 			</p>
 
@@ -258,7 +276,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div id="envelope" class="col d-flex py-2"><i class="fas fa-envelope fa-3x"></i>
-				<h4 class="align-self-center px-2">Contact</h4>
+				<h4 class="align-self-center px-2">Contact</h4><p class="align-self-end">(703)838-5927</p>
 			</div>
 		</div>
 
@@ -272,10 +290,10 @@
 
 			<textarea id="message" name="message" placeholder="Message..." style="height:200px"></textarea>
 
-			<div class="g-recaptcha" data-sitekey="6LcZdvIUAAAAALg5v2zMrnhUyHKe308E3Wadjvjm"></div>
+			<div class="g-recaptcha px-3" data-sitekey="6LcZdvIUAAAAALg5v2zMrnhUyHKe308E3Wadjvjm"></div>
 
-			<button class="btn btn-success ml-3 " type="submit"> Send</button>
-			<button class="btn btn-warning ml-3" type="reset">Reset</button>
+			<button class="btn btn-success ml-3 mt-1" type="submit"> Send</button>
+			<button class="btn btn-warning ml-3 mt-1" type="reset">Reset</button>
 
 		</form>
 
