--- a/public_html/index.html
+++ b/public_html/index.html
@@ -79,20 +79,20 @@
 <!--About Me section starts-->
 <section id="about">
 
-<div class="container-fluid">
-	<p class="display-4 text-left text-uppercase text-dark mb-0 px-5">
+<div class="container-fluid bg-light">
+	<p class="display-4 text-left text-uppercase text-dark mt-3 mb-0 px-5">
 		<strong>About Me</strong>
 	</p>
 	<div class="title-underline bg-danger ml-5"></div>
 
-	<div class="container-fluid my-5 pb-5">
-		<div class="row bg-light text-dark">
+	<div class="container-fluid pb-5">
+		<div class="row bg-light pt-3 text-dark">
 			<div class="container px-0">
 				<div class="col-md-3">
 					<img class="float-left img-fluid py-5 my-image" src="images/IMG_0502.JPG" alt="Jonah's photo">
 				</div>
-				<div class="col-md-9 float-right py-5">
-	<p class="text-muted px-4 py-3 col-md-12">
+				<div class="col-md-9 float-right py-0">
+	<p class="text-muted px-4 py-5 col-md-12">
 		I'm a resident of the state of New Mexico. I'm originally from Nigeria. I majored in Mathematics and Statistics
 		in the University of Lagos class of 2015, Nigeria where
 		 I encountered programming for the first time. My first program was written in Java and it was a "Hello world"
@@ -111,11 +111,11 @@
 		</div>
 	</div>
 </div>
-	</div>
 
 
-<div class="container-fluid pt-4">
-	<div class="row d-flex justify-content-between mx-4">
+
+<div class="container-fluid bg-light">
+	<div class="row d-flex  justify-content-between mx-4">
 
 		<div class="col my-4 mx-5">
 			<i class="fas fa-basketball-ball fa-10x text-warning" ></i>
@@ -141,7 +141,7 @@
 
 
 	</div>
-	</div>
+	</div></div>
 </section>
 <!--End of about me section-->
 
